add aditional columns to tables in database

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,5 +4,5 @@
 <br>
 <h3><%= link_to "My Schedule", user_schedules_path(@user) %></h3>
 <br>
-<h3><%= link_to "Gyms List", gym_list_path %></h3>
+<h3><%= link_to "Gyms List", gym_lists_path %></h3>
 <br>
