--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -5,7 +5,7 @@
 <%= f.hidden_field :user_id, value: current_user.id %>
 
 <%= f.label :client %>
-<%= f.collection_select :client_id, current_user.client, :id, :name %>
+<%= f.collection_select :client_id, current_user.clients, :id, :name %>
 <br><br>
 
 <%= f.label :gym_list %>
