--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -18,8 +18,8 @@
     <div>
       <p> Gender: <%= @client.gender %> </p>
       <p> Age: <%= @client.age %> years</p>
-      <p> Weight: <%= @client.weight %> cm</p>
-      <p> Height: <%= @client.height %> kg</p>
+      <p> Weight: <%= @client.weight %> kg</p>
+      <p> Height: <%= @client.height %> cm</p>
     </div>
   </li>
 </ul>
