--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,3 +6,5 @@
 <br>
 <h3><%= link_to "Gyms List", gym_lists_path %></h3>
 <br>
+<h1>Best of the month <%= @trainer.email %></h1>
+<h1>He has <%= @total_clients %> clients</h1>
