--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -16,11 +16,16 @@
 </h4>
 <br>
 
+
 <% @schedules.each do |schedule| %>
+
+<% if schedule.client %>
 <h4>Personal Training for: <%= schedule.client.name %></h4>
 <time>Date/Time: <%= schedule.date_day.strftime('%b %e, %l:%M %p') %></time>
 <h4>
 <%= link_to 'Change Schedule', edit_user_schedule_path(schedule.user_id, schedule) %>
 </h4>
+
+<% end %>
 <% end %>
 <% end %>
